Add explicit width and height for images

--- a/src/components/job/position.astro
+++ b/src/components/job/position.astro
@@ -33,7 +33,7 @@ const {
 
 <div class="flex flex-col gap-10 lg:ml-auto">
     <div class="overflow-hidden w-screen-2/3 lg:w-screen-1/4 flex flex-col border-4 border-blue-log rounded-[42px]">
-        <img class="w-full" src={PosteReference} alt="Poste de référence" />
+        <img class="w-full" src={PosteReference} width="472" height="261" alt="" />
         <h1 class="text-2xl font-bold p-4">LE POSTE</h1>
         <div class="grid grid-cols-8 content-around text-xl leading-10 p-4">
             <div class="col-start-1 col-span-1"></div>
@@ -88,7 +88,7 @@ const {
     <div class="bg-blue-log rounded-[42px] text-center text-white font-extrabold mt-[calc(3.75vw+1rem)] pt-24 pb-8 px-8">
         <div class="overflow-hidden absolute translate-x-[calc(23.3333vw-2rem)] lg:translate-x-[calc(8.75vw-2rem)] -translate-y-[calc(10vw+6rem)] lg:-translate-y-[calc(3.75vw+6rem)] bg-white rounded-3xl w-screen-1/5 lg:w-screen-3/40 h-screen-1/5 lg:h-screen-3/40 p-1">
             <div class="overflow-hidden bg-gray-log rounded-3xl w-full h-full">
-                <img class="object-cover" src={hr_picture} alt="Photo du responsable de l'offre" />
+                <img class="object-cover" src={hr_picture} alt="" />
             </div>
         </div>
         <h2 class="text-2xl mb-8">Responsable de l'offre</h2>
