--- a/src/pages/expertise.astro
+++ b/src/pages/expertise.astro
@@ -7,6 +7,11 @@ import { BackgroundColor, TextColor } from "@libs/types";
 import EcosystemeTechnologiqueReference from "@static/expertise-technos.avif";
 import DatacenterReference from "@static/datacenter.avif";
 
+const bannerImage = {
+    src: DatacenterReference,
+    width: 980,
+    height: 980,
+}
 ---
 
 <BaseLayout title="Notre expertise">
@@ -16,7 +21,7 @@ import DatacenterReference from "@static/datacenter.avif";
         description="Soleo saepe ante oculos ponere, idque libenter crebris usurpare sermonibus, omnis nostrorum imperatorum, omnis exterarum gentium potentissimorumque populorum, omnis clarissimorum regum res gestas, cum tuis nec varietate regionum nec celeritate conficiendi nec dissimilitudine bellorum posse conferri; nec vero disiunctissimas terras citius passibus."
         bgColor={BackgroundColor.RED}
         textColor={TextColor.RED}
-        image={DatacenterReference}
+        image={bannerImage}
     />
     <section class="relative max-w-7xl mx-auto text-center">
         <h1 class="font-bold text-3xl uppercase">Nos savoirs-faires</h1>
@@ -111,7 +116,7 @@ import DatacenterReference from "@static/datacenter.avif";
                         Technologies adhérentes au Cloud : Réseaux, Sécurité et Data
                     </li>
                 </ul>
-                <img class="w-[500px]" src={EcosystemeTechnologiqueReference} alt="Technologies Cloud" />
+                <img class="w-[500px]" src={EcosystemeTechnologiqueReference} width="737" height="390" alt="Technologies Cloud" />
             </div>
         </div>
     </section>
