Fix incorrect aspect ratio for some images

--- a/src/layouts/JoinUsLayout.astro
+++ b/src/layouts/JoinUsLayout.astro
@@ -9,7 +9,7 @@ import HommeClavierReference from "@static/homme-clavier.avif";
 <BaseLayout title="Rejoignez-nous">
     <section class="relative w-full">
         <div class="absolute h-[32rem] top-[160px] lg:top-auto lg:bottom-0 left-[calc(50vw-170px)] lg:left-[calc(50vw-100px)]">
-            <img class="h-full" src={HommeClavierReference} width="396" height="672" alt="Homme avec un clavier" />
+            <img class="h-full w-auto" src={HommeClavierReference} width="396" height="672" alt="Homme avec un clavier" />
         </div>
         <div class="flex flex-col lg:flex-row min-h-[34rem]">
             <div class="flex w-full justify-center lg:justify-end items-center bg-black text-white">
