--- a/src/components/job/position.astro
+++ b/src/components/job/position.astro
@@ -36,7 +36,9 @@ const {
         <img class="w-full" src={PosteReference} width="472" height="261" alt="" />
         <h1 class="text-2xl font-bold p-4">LE POSTE</h1>
         <div class="grid grid-cols-8 content-around text-xl leading-10 p-4">
-            <div class="col-start-1 col-span-1"></div>
+            <div class="col-start-1 col-span-1">
+                <svg class="w-8 h-8 fill-blue-log" viewBox="0 0 108.11 148.06"><path d="M108.11 5.96l-5.76 27.05c-5.53-5.53-13.61-8.3-24.22-8.3s-19.21 3.81-25.78 11.43c-3.71 4.3-6.35 9.67-7.91 16.11h53.71l-3.12 15.14H42.49c-.07 1.5-.1 3.42-.1 5.76s.06 4.66.2 7.13H92.3l-3.12 15.14H44.65c1.63 6.97 4.13 12.44 7.52 16.41 6.51 7.68 14.97 11.52 25.39 11.52 12.5 0 22.46-3.84 29.88-11.52v29.88c-8.46 4.23-18.33 6.35-29.59 6.35-19.01 0-34.64-6.51-46.88-19.53-8.33-8.85-13.83-19.89-16.5-33.11H0l3.12-15.14h9.57a111.67 111.67 0 0 1-.1-4.98c0-2.99.06-5.63.2-7.91H0l3.12-15.14h11.62c2.73-12.95 8.17-23.79 16.31-32.52C43.36 6.58 59.54 0 79.59 0c10.94 0 20.44 1.99 28.52 5.96z"/></svg>
+            </div>
             <div class="col-start-2 col-span-8">
                 <p>Salaire: {salary}</p>
             </div>
