--- a/src/pages/nous-rejoindre.astro
+++ b/src/pages/nous-rejoindre.astro
@@ -14,6 +14,7 @@ const allJobEntries = await getCollection('job');
                 <JobCard
                     title={job.data.title}
                     summary={job.data.summary}
+                    publish_date={new Date(job.data.publish_date).toLocaleDateString()}
                     href={`/jobs/${job.slug}`}
                 />
             </div>
