Center title text

--- a/src/layouts/JoinUsLayout.astro
+++ b/src/layouts/JoinUsLayout.astro
@@ -38,7 +38,7 @@ import HommeClavierReference from "@static/homme-clavier.avif";
     </section>
     <section class="relative px-4 max-w-8xl mx-auto">
         <SectionTitle>
-            <h1>Nos offres d'emploi</h1>
+            <h1 class="text-center">Nos offres d'emploi</h1>
         </SectionTitle>
         <slot />
     </section>
