Fix marker color issue in `ListCard` component

--- a/src/components/ui/list_card.astro
+++ b/src/components/ui/list_card.astro
@@ -1,6 +1,6 @@
 ---
 
-import type { BorderColor, TextColor } from "@libs/types";
+import { BorderColor, TextColor } from "@libs/types";
 
 interface Props {
     title: string
@@ -8,6 +8,31 @@ interface Props {
     borderColor: BorderColor
 };
 const { title, textColor, borderColor } = Astro.props as Props;
+
+// Map text colors like TextColor.RED (which gives text-red-log) to marker color like marker:text-red-log
+// marker:text-red-log needs to be written completely for TailwindCSS to detect it
+const mapColor = (textColor: TextColor) => {
+    switch (textColor) {
+        case TextColor.RED:
+            return "marker:text-red-log";
+        case TextColor.BLUE:
+            return "text-blue-log";
+        case TextColor.GREEN:
+            return "text-green-log";
+        case TextColor.YELLOW:
+            return "text-yellow-log";
+        case TextColor.BLACK:
+            return "text-black";
+        case TextColor.GRAY:
+            return "text-gray-log";
+        case TextColor.WHITE:
+            return "text-white";
+        default:
+            return "text-black";
+    }
+}
+const markerColor = mapColor(textColor);
+
 ---
 
 <div class="flex flex-col items-center gap-4">
@@ -15,7 +40,7 @@ const { title, textColor, borderColor } = Astro.props as Props;
     <h2 class="font-semibold text-xl md:text-2xl uppercase mt-10">{title}</h2>
     <div class="relative flex justify-center px-6 py-4">
         <div class={`absolute top-0 left-0 border-t-2 border-l-2 rounded-tl-2xl ${borderColor} w-12 h-12`}></div>
-        <ul class={`flex flex-col items-start md:gap-6 marker:${textColor} marker:text-3xl md:marker:text-4xl marker:align-middle list-inside list-[square] text-start text-lg md:text-xl`}>
+        <ul class={`flex flex-col items-start md:gap-6 ${markerColor} marker:text-3xl md:marker:text-4xl marker:align-middle list-inside list-[square] text-start text-lg md:text-xl`}>
             <slot name="list" />
         </ul>
     </div>
