Fix typo in `ListCard` component

--- a/src/components/ui/list_card.astro
+++ b/src/components/ui/list_card.astro
@@ -16,19 +16,19 @@ const mapColor = (textColor: TextColor) => {
         case TextColor.RED:
             return "marker:text-red-log";
         case TextColor.BLUE:
-            return "text-blue-log";
+            return "marker:text-blue-log";
         case TextColor.GREEN:
-            return "text-green-log";
+            return "marker:text-green-log";
         case TextColor.YELLOW:
-            return "text-yellow-log";
+            return "marker:text-yellow-log";
         case TextColor.BLACK:
-            return "text-black";
+            return "marker:text-black";
         case TextColor.GRAY:
-            return "text-gray-log";
+            return "marker:text-gray-log";
         case TextColor.WHITE:
-            return "text-white";
+            return "marker:text-white";
         default:
-            return "text-black";
+            return "marker:text-black";
     }
 }
 const markerColor = mapColor(textColor);
