--- a/src/pages/jobs/[slug].astro
+++ b/src/pages/jobs/[slug].astro
@@ -23,10 +23,10 @@ const { entry } = Astro.props;
 
 <JobOfferLayout title={entry.data.title} email={entry.data.hr_email}>
   <Description slot="description">
-    <p class="text-2xl mb-16 text-justify" slot="description">
+    <p class="text-xl md:text-2xl mb-16 text-justify" slot="description">
         <Fragment set:html={entry.data.description.join("<br /><br />")} />
     </p>
-    <p class="text-2xl text-justify" slot="profile">
+    <p class="text-xl md:text-2xl text-justify" slot="profile">
         <Fragment set:html={entry.data.profile.join("<br /><br />")} />
     </p>
   </Description>
@@ -42,5 +42,6 @@ const { entry } = Astro.props;
     hr_name={entry.data.hr_name}
     hr_email={entry.data.hr_email}
     hr_phone={entry.data.hr_phone}
+    hr_picture={entry.data.hr_picture}
   />
 </JobOfferLayout>
